@@ -5,7 +5,7 @@
 
 #include <stdio.h>
 #include <stdlib.h>
-#include <syscall.h>
+#include <unistd.h>
 
 extern int	*_arena, _asize;
 
