@@ -4,7 +4,7 @@
  */
 
 #include <time.h>
-#include <syscall.h>
+#include <unistd.h>
 
 int time(int *tp) {
 	int	t;
